--- a/inscription.html
+++ b/inscription.html
@@ -9,16 +9,13 @@
         <h1>Inscription</h1>
     </div>
 
-    <div class="formulaire">
-        <form method="post" action="index.php"><!--téléchargement de fichier-->
+        <form class="formulaire" method="post" action="index.php"><!--téléchargement de fichier-->
             <input type="text" name="name" placeholder="Nom" required><br>
             <input type="text" name="username" placeholder="Nom d'utilisateur" required><br>
             <input type="email" name="email" placeholder="Adresse e-mail" required><br>
             <input type="password" name="password" placeholder="Mot de passe" required><br>
             <input type="text" name="photo" required><br>
-            <button class="submit-btn" type="submit">S'inscrire</button>
+            <button class="submit-btn-register" type="submit">S'inscrire</button>
         </form>
-    </div>
-
 </body>
 </html>
